[package]
name = "phasetida-wasm-core"
version = "0.1.1"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
byteorder = "1.5.0"
js-sys = "0.3.83"
serde = {version = "1.0.228", features = ["derive"]}
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.147"
wasm-bindgen = { version = "0.2.106", features = ["std"] }
web-sys = { version = "0.3.83", features = [
    "Window", "Document", "Element","HtmlCanvasElement","CanvasRenderingContext2d"
] }
